🔨 FIX: remove top margin to improve top alignment

--- a/social-proof-section-grid/styles.css
+++ b/social-proof-section-grid/styles.css
@@ -47,6 +47,7 @@ Header
 ============================= */
 
 h1 {
+	margin-top: 0;
 	margin-bottom: 1em;
 	font-size: 2.5rem;
 	font-weight: 600;
